2006-03-30  Eric Anholt  <anholt@FreeBSD.org>

	* exa/exa.c: (exaValidateGC):
	* exa/exa_priv.h:
	* exa/exa_unaccel.c: (exaGetPixmapFirstPixel):
	Remove the exaAsyncPixmapGCOps mostly-unaccelerated ops vector, and
	always plug in the accelerated one, even if the destination pixmap is
	currently offscreen. This was a leftover from when kaa originally got
	accelerated offscreen pixmap support, and its only concievable use
	was to avoid a little overhead on ops to in-system pixmaps that weren't
	going to get migrated.  At this point, we probably care more about just
	getting everything accelerated that we easily can, which should happen
	with the new migration support.

2006-03-30  Eric Anholt  <anholt@FreeBSD.org>

	* exa/exa_accel.c: (exaCopyWindow):
	Don't do an extra fallback path for CopyWindow while swappedOut, since
	exaCopyNtoN takes care of the fallback anyway, and we don't care about
	the performance of this path.

2006-03-30  Eric Anholt  <anholt@FreeBSD.org>

	* hw/kdrive/ephyr/Makefile.am:
	Add a dependency on EXA, so it rebuilds when the library does.  The
	manual indicated I shouldn't do this, but experience indicates I should.

2006-03-30  Kristian Høgsberg  <krh@redhat.com>

	* GL/glx/glxcmds.c (__glXCreateARGBConfig): Mark the ARGB FBConfig
	as nonconforming to prevent drivers and apps from falling over.

	* GL/mesa/*/Makefile.am (AM_CFLAGS): Add @GLX_DEFINES@ so GLcore
	gets compiled with TLS support if configured.

	* GL/mesa/X/xf86glx.c (__glXMesaDrawableDestroy): Only destroy the
	mesa buffer if it got initialized.

2006-03-30  Egbert Eich  <eich_at_freedesktop_dot_org>

	* include/colormapst.h:
	* include/pixmapstr.h:
	* mi/miwideline.c: (miFillRectPolyHelper), (miLineArc):
	Fixes for some vsw4 failures on 64bit BE platforms such as
	PPC64 and s390x. Provided by Hong Bo Peng of IBM (slightly
	modified). Patches try to resolve some of the careless
	mixtures of ulong and uint (which are different size on
	64bit). 